--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,28 @@
 body {
-    font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .navbar {
-    max-width: 870px;
-    width: 100%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  max-width: 870px;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .nav-list {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    padding: 0;     
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 0;
 }
 .nav-link {
-    text-decoration: none;
-    color: #BF7506;
-    margin-left: 24px;
-    font-style: 16px;
-    line-height: 150%;
+  text-decoration: none;
+  color: #bf7506;
+  margin-left: 24px;
+  font-style: 16px;
+  line-height: 150%;
 }
 .nav-link.active {
-    font-weight: 700;
+  font-weight: 700;
 }
