--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,6 @@ body {
 }
 
 .navbar {
-  max-width: 870px;
-  width: 100%;
-  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -25,4 +22,137 @@ body {
 }
 .nav-link.active {
   font-weight: 700;
+}
+.container {
+  max-width: 870px;
+  width: 100%;
+  margin: auto;
+}
+.header {
+    padding: 70px 0;
+    display: flex;
+    align-items: center;
+}
+.header-text {
+    margin-left: 27px;
+}
+.header-strong {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 125%;
+}
+.header-heading {
+    font-weight: 700;
+    font-size: 24px; 
+    line-height: 135%;
+    letter-spacing: -0.02em;
+    margin-top: 8px;
+    margin-bottom: 24px;
+}
+.header-primary {
+    color: #bf7506; 
+}
+.social-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+.socila-link {
+    padding: 8px;
+    display: inline-block;
+}
+.header-links {
+    display: flex;
+    align-items: center;
+}
+.cv-download {
+    display: flex;
+    align-items: center;
+    padding: 7px 8px;
+    margin-left: 55px;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211b12;
+    border-bottom: 2px solid #bf7506;
+}
+.cv-icon {
+    margin-right: 4px;
+}
+.section-heading{
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 125%;
+    letter-spacing: -0.03em;
+    color: #bf7506;
+}
+.card {
+    max-width: 400px;
+    margin-bottom: 40px;
+}
+.card-text-wrapper {
+    padding: 16px;
+}
+.card-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 135%;
+    letter-spacing: -0.02em;
+    color: #bf7506;
+    margin-top: 0;
+}
+.card-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211b12;
+}
+
+.tags {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    margin-top: 8px;
+    margin-bottom: 16px;
+}
+.tag {
+    padding: 4px 8px;
+    display: inline-block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    color: #211b12;
+    text-decoration: none;
+    background: #fff;
+    border: 1px solid #dd9c3c;
+    border-radius: 4px;
+    margin-right: 4px;
+
+}
+.card-buttons {
+    display: flex;
+    align-items: center;
+}
+.card-button {
+    display: flex;
+    align-items: center;
+    padding: 7px 8px;
+    text-decoration: none;
+    color: #211b12;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    border-bottom: 2px solid #bf7506;
+    margin-right: 25px;
+}
+.card-button-icon {
+    margin-right: 4px;
+}
+.cards{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
 }
