--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,6 @@ body {
 }
 
 .navbar {
-  max-width: 870px;
-  width: 100%;
-  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -25,4 +22,9 @@ body {
 }
 .nav-link.active {
   font-weight: 700;
+}
+.container {
+  max-width: 870px;
+  width: 100%;
+  margin: auto;
 }
