--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
   width: 100%;
   margin: auto;
 }
-====== .header {
+.header {
   padding: 70px 0;
   display: flex;
   align-items: center;
